fix: word break in description

--- a/webui/react/src/components/InlineEditor.module.scss
+++ b/webui/react/src/components/InlineEditor.module.scss
@@ -13,6 +13,7 @@
      */
     display: grid;
     position: relative;
+    word-break: break-word;
   }
   .growWrap::after {
     /* Extra space needed to prevent jumpy behavior. */
